--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body{
     transition: all 1000ms ease-in-out;
     color:#333;
 }
+#state{
+    font-size: 10px;
+    color: red;
+}
 .display{
     display: flex;
     justify-content: center;
