--- a/style.css
+++ b/style.css
@@ -110,18 +110,25 @@ body{
     padding: 10px 15px;
     border-radius: 17px;
 }
-@media (max-width: 375px){
-    /* .container{
-        width: 70%;
-        position: relative;
-        left: 30px;
-        top: 150px;
-        background: #1F2937;
-        padding: 20px;
-    } */
-}
-@media (min-width: 375px) and (max-width:750px){
+@media (max-height: 850px){
     .container{
+        width: 80%;
+        height: 70%;
+        position: relative;
+        background: #1F2937;
+        padding-bottom: 0;
+    }
+    .gen{
+        font-size: 25px;
+        text-align: center;
+    }
+    .copy-container {
+        height: 30%;
+        width: 100%;
+    }
+}
+@media (min-width: 375px){
+    /* .container{
         width: 50%;
         height:90vh;
         margin:0 auto;
@@ -129,7 +136,7 @@ body{
         position: relative;
         background: #1F2937;
         padding: 20px;
-    }
+    } */
     .copy {
         /* left: 50px; */
         color: #fff;
@@ -143,5 +150,20 @@ body{
     .generated3,
     .generated4 {
         padding: 7px 12px;
+    }
+}
+@media (max-width: 1190px){
+    .container{
+        width: 50%;
+        height:80vh;
+        margin:0 auto;
+        margin-top: 5px;
+        position: relative;
+        background: #1F2937;
+        padding: 20px;
+    }
+    .copy-container {
+        height: 30%;
+        width: 100%;
     }
 }
