--- a/style.css
+++ b/style.css
@@ -152,12 +152,12 @@ body{
         padding: 7px 12px;
     }
 }
-@media (max-width: 1190px){
+@media (max-height: 1400px){
     .container{
-        width: 50%;
-        height:80vh;
+        width: 70%;
+        height:60vh;
         margin:0 auto;
-        margin-top: 5px;
+        margin-top: 30px;
         position: relative;
         background: #1F2937;
         padding: 20px;
@@ -165,5 +165,27 @@ body{
     .copy-container {
         height: 30%;
         width: 100%;
+    }
+}
+@media(max-height:920px){
+    .container{
+        width: 60%;
+        height:70vh;
+        margin:0 auto;
+        margin-top: 50px;
+        padding: 20px 40px;
+    }
+
+    .copy-container {
+        height: 40%;
+        width: 100%;
+    }
+    .copy-top,
+    .copy-down {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 10px 5px;
     }
 }
